--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   </style>
 </head>
 <body>
-  <h1>Добро пожаловать на сайт OPTIMA+</h1>
-  <p>Здесь вы можете отслеживать свои тесты и лекции.</p>
+  <h1>OPTIMA+</h1>
 
   <!-- Элемент для отображения версии -->
-  <div id="version-text">Версия сайта: 1.1</div>
+  <div id="version-text">Версия расширения: 1.1</div>
 
   <script src="content.js"></script>
 </body>
