--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>OPTIMA+</h1>
 
   <!-- Элемент для отображения версии -->
-  <div id="version-text">Версия расширения: 1.1</div>
+  <div id="version-text">Версия расширения: 1.2</div>  <!-- Обновленная версия для теста -->
 
   <script src="content.js"></script>
 </body>
