--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OPTIMA+</title>
+  <title>Информационные боксы</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: space-between;
+      margin: 0;
       padding: 20px;
     }
-    #version-text {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #333;
+    .box {
+      width: 30%;
+      height: 200px;
+      border: 2px solid white;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>OPTIMA+</h1>
-
-  <!-- Элемент для отображения версии -->
-  <div id="version-text">Версия расширения: 1.3</div>
-
-  <script src="content.js"></script>
+  <div class="box">Слева</div>
+  <div class="box">По центру</div>
+  <div class="box">Справа</div>
 </body>
 </html>
