--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     .box {
       width: 30%;
-      height: 200px;
+      height: 300px;
       border: 2px solid white;
       background-color: #f0f0f0;
       display: flex;
@@ -33,13 +33,24 @@
       align-items: center;
       text-align: center;
       color: black;
+      padding: 20px;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
   <div class="header">OPTIMA+</div>
   <div class="container">
-    <div class="box">Слева</div>
+    <div class="box">
+      <div>
+        <strong>Инструкция по установке:</strong><br><br>
+        1. Нажимаете кнопку скачать<br>
+        2. Заходите в настройки расширений<br>
+        3. Включаете режим разработчика<br>
+        4. Импортируете в браузер расширение<br>
+        5. Все! Расширение работает на сайте оптимы
+      </div>
+    </div>
     <div class="box">По центру</div>
     <div class="box">Справа</div>
   </div>
