--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Информационные боксы</title>
+  <title>OPTIMA+</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,6 +36,20 @@
       padding: 20px;
       box-sizing: border-box;
     }
+    .button {
+      display: inline-block;
+      padding: 15px 30px;
+      background-color: #006400;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 5px;
+      border: none;
+      cursor: pointer;
+    }
+    .button:hover {
+      background-color: #004d00;
+    }
   </style>
 </head>
 <body>
@@ -51,7 +65,9 @@
         5. Все! Расширение работает на сайте оптимы
       </div>
     </div>
-    <div class="box">По центру</div>
+    <div class="box">
+      <a href="optima-extension.zip" class="button" download>Скачать</a>
+    </div>
     <div class="box">Справа</div>
   </div>
 </body>
