--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
       </div>
     </div>
     <div class="box">
-      <a href="optima-extension.zip" class="button" download>Скачать</a>
+      <a href="optima+.zip" class="button" download>Скачать</a>
     </div>
-    <div class="box">Справа</div>
+    <div class="box">Что может расширение:
+    1.подсчитывать все тесты(долги) которые нужно сделать и выводить их число
+    2.подсчёт лекций
+    3.установка таймера к дедлайну по дате
+    4.в будущем добавим подсчёт среднего бала
+    </div>
   </div>
 </body>
 </html>
