--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       padding: 0;
       background-color: #282828;
       color: white;
+      text-align: center;
     }
     .header {
-      text-align: center;
       font-size: 36px;
       padding: 20px;
       background-color: #333;
@@ -27,14 +27,15 @@
       width: 30%;
       height: 300px;
       border: 2px solid white;
-      background-color: #f0f0f0;
+      background-color: #3a3a3a;
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      color: black;
       padding: 20px;
       box-sizing: border-box;
+      border-radius: 10px;
     }
     .button {
       display: inline-block;
@@ -49,6 +50,14 @@
     }
     .button:hover {
       background-color: #004d00;
+    }
+    .footer {
+      margin-top: 30px;
+      font-size: 12px;
+    }
+    .footer a {
+      color: #4c9aff;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -66,14 +75,12 @@
       </div>
     </div>
     <div class="box">
-      <a href="optima+.zip" class="button" download>Скачать</a>
+      <a href="optima-extension.zip" class="button" download>Скачать</a>
     </div>
-    <div class="box">Что может расширение:
-    1.подсчитывать все тесты(долги) которые нужно сделать и выводить их число
-    2.подсчёт лекций
-    3.установка таймера к дедлайну по дате
-    4.в будущем добавим подсчёт среднего бала
-    </div>
+    <div class="box">Справа</div>
+  </div>
+  <div class="footer">
+    <a href="https://fading-ind.itch.io/" target="_blank">by fading ind</a>
   </div>
 </body>
 </html>
