--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
     <div class="box">
       <a href="optima-extension.zip" class="button" download>Скачать</a>
     </div>
-    <div class="box">Справа</div>
+    <div class="box">>Что может расширение:
+    1.подсчитывать все тесты(долги) которые нужно сделать и выводить их число
+    2.подсчёт лекций
+    3.установка таймера к дедлайну по дате
+    4.в будущем добавим подсчёт среднего бала
+    </div>
   </div>
   <div class="footer">
     <a href="https://fading-ind.itch.io/" target="_blank">by fading ind</a>
