--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #282828;
+      background: linear-gradient(135deg, #222222, #333333);
       color: white;
       text-align: center;
     }
     .header {
       font-size: 36px;
       padding: 20px;
-      background-color: #333;
+      background: linear-gradient(90deg, #292929, #3a3a3a);
+      border-bottom: 2px solid white;
     }
     .container {
       display: flex;
@@ -27,7 +28,7 @@
       width: 30%;
       height: 300px;
       border: 2px solid white;
-      background-color: #3a3a3a;
+      background: linear-gradient(135deg, #2a2a2a, #3a3a3a);
       color: white;
       display: flex;
       justify-content: center;
@@ -62,30 +63,4 @@
   </style>
 </head>
 <body>
-  <div class="header">OPTIMA+</div>
-  <div class="container">
-    <div class="box">
-      <div>
-        <strong>Инструкция по установке:</strong><br><br>
-        1. Нажимаете кнопку скачать<br>
-        2. Заходите в настройки расширений<br>
-        3. Включаете режим разработчика<br>
-        4. Импортируете в браузер расширение<br>
-        5. Все! Расширение работает на сайте оптимы
-      </div>
-    </div>
-    <div class="box">
-      <a href="optima-extension.zip" class="button" download>Скачать</a>
-    </div>
-    <div class="box">>Что может расширение:
-    1.подсчитывать все тесты(долги) которые нужно сделать и выводить их число
-    2.подсчёт лекций
-    3.установка таймера к дедлайну по дате
-    4.в будущем добавим подсчёт среднего бала
-    </div>
-  </div>
-  <div class="footer">
-    <a href="https://fading-ind.itch.io/" target="_blank">by fading ind</a>
-  </div>
-</body>
-</html>
+  <div class="header">OPT
