--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #222222, #333333);
+      background: linear-gradient(135deg, #1e1e1e, #3a3a3a);
       color: white;
       text-align: center;
     }
     .header {
       font-size: 36px;
       padding: 20px;
-      background: linear-gradient(90deg, #292929, #3a3a3a);
-      border-bottom: 2px solid white;
+      background: linear-gradient(135deg, #2a2a2a, #3a3a3a);
     }
     .container {
       display: flex;
@@ -63,4 +62,33 @@
   </style>
 </head>
 <body>
-  <div class="header">OPT
+  <div class="header">OPTIMA+</div>
+  <div class="container">
+    <div class="box">
+      <div>
+        <strong>Инструкция по установке:</strong><br><br>
+        1. Нажимаете кнопку скачать<br>
+        2. Заходите в настройки расширений<br>
+        3. Включаете режим разработчика<br>
+        4. Импортируете в браузер расширение<br>
+        5. Все! Расширение работает на сайте оптимы
+      </div>
+    </div>
+    <div class="box">
+      <a href="optima-extension.zip" class="button" download>Скачать</a>
+    </div>
+    <div class="box">
+      <div>
+        <strong>Что может расширение:</strong><br><br>
+        1. Подсчитывать все тесты (долги) и выводить их число<br>
+        2. Подсчет лекций<br>
+        3. Установка таймера к дедлайну по дате<br>
+        4. В будущем добавим подсчет среднего балла
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <a href="https://fading-ind.itch.io/" target="_blank">by fading ind</a>
+  </div>
+</body>
+</html>
