--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #1e1e1e, #3a3a3a);
+      background-color: #282828;
       color: white;
       text-align: center;
     }
     .header {
       font-size: 36px;
       padding: 20px;
-      background: linear-gradient(135deg, #2a2a2a, #3a3a3a);
+      background-color: #333;
     }
     .container {
       display: flex;
@@ -27,7 +27,7 @@
       width: 30%;
       height: 300px;
       border: 2px solid white;
-      background: linear-gradient(135deg, #2a2a2a, #3a3a3a);
+      background-color: #1a1a1a;
       color: white;
       display: flex;
       justify-content: center;
