--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #282828;
+      background-color: #1a1a1a;
       color: white;
       text-align: center;
     }
