--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="box">
-      <a href="optima-extension.zip" class="button" download>Скачать</a>
+      <a href="optima+.zip" class="button" download>Скачать</a>
     </div>
     <div class="box">
       <div>
